src/components/Card/styles/WorkCard.module.scss
@use '../../../styles/variable.scss' as *;

.workCard {
    border-radius: 1em;
    overflow: hidden;
    height: fit-content;
    text-align: center;
    transition: box-shadow 0.3s ease, background-color 0.3s ease, transform .2s ease, flex-basis .35s ease,;
    width: 23%;
    padding: 0 0.5em;
    margin-bottom: 2em;

    .hero {
        position: relative;
        margin: 0;
        padding: 0;
        
        .workImg {
            width: 100%;
            border-radius: 1em;
        }

        .heroTitle {
            position: absolute;
            right: .75rem;
            bottom: .75rem;

            color: $color-white;
            font-size: 1.3em; 
            background-color: rgba($color-black, 0.5);
            padding: 0.4em 2em;
            border-radius: 0.3em;
            backdrop-filter: blur(0.2em);
            -webkit-backdrop-filter: blur(0.1em);

            max-width: 60%;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
            display: inline-block;
        }
    }

    .content {
        .summary {
            max-height: 0;
            opacity: 0;
            margin: 1em 0 1.7em;
            transition: max-height 0.3s ease, opacity 0.3s ease-in-out;
        }

        .workTitle {
            font-size: 2em;
            margin: 0.5em 1em;
        }
    }

    &:hover {
        background-color: rgba($color-primary, 0.3);
        box-shadow: 0 1em 1em rgba($color-darker, 0.3);
        
        &.dark {
            box-shadow: 0 1em 1em rgba($color-black, 0.3);
        }
        
        .hero {
            .workImg {
                border-radius: 0;
            }

            .heroTitle {
                opacity: 0;
            }
        }
        
        .content .summary {
            max-height: 20em;
            opacity: 1;
        }
    }
    
    .workDetails, .workGallery {
        display: none;
    }
}

.expanded {
    width: 100%;
    order: -1;
    width: 100%;
    height: 100%;
    display: flex;
    background-color: rgba($color-primary, 0.8);
    box-shadow: 0 1em 1em rgba($color-darker, 0.3);
    border-radius: 1em;
    overflow: hidden;
    margin-bottom: 2em;
    
    &.dark {
        box-shadow: 0 1em 1em rgba($color-black, 0.3);
    }

    .hero {
        width: 50%;

        .workImg {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }

        .heroTitle {
            display: none;
        }
    }

    .content {
        width: 40%;
        text-align: center;
        padding: 0 3em;
        align-content: center;

        .workDetails {
            margin: 1em;
        }

        .workTitle {
            justify-self: center;
            display: flex;
            align-items: center;
            margin: 1em 1em 0.1em;
            transition: color 0.2s ease, transform 0.2s ease;

            span {
                display: flex;
                margin-left: 0.6em;
                font-size: 0.7em;
            }

            &:hover {
                transform: translateY(-2px);
                color: $color-secondary;
            }
        }
    }

    .workGallery {
        width: 10%;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 0.2em;
        background-color: rgba($color-darker, 0.5);

        .workImg {
            width: 100%;
            opacity: 0.6;
            transition: opacity 0.5s ease;

            &:hover {
                opacity: 1;
            }
        }

        &.dark {
            background-color: rgba($color-lighter, 0.5);
        }
    }
}

